--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -5,6 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
+    "channels>=4.2.2",
     "dj-rest-auth>=7.0.1",
     "django>=5.2.3",
     "django-allauth>=65.9.0",
