--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -16,8 +16,10 @@ dependencies = [
     "djangorestframework>=3.16.0",
     "djangorestframework-simplejwt>=5.5.0",
     "drf-spectacular>=0.28.0",
+    "jinja2>=3.1.6",
     "psycopg2>=2.9.10",
     "requests>=2.32.4",
     "rest-framework-simplejwt>=0.0.2",
+    "weasyprint>=65.1",
     "whitenoise>=6.9.0",
 ]
