--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -17,7 +17,9 @@ dependencies = [
     "djangorestframework-simplejwt>=5.5.0",
     "drf-spectacular>=0.28.0",
     "jinja2>=3.1.6",
+    "pandas>=2.3.0",
     "psycopg2>=2.9.10",
+    "reportlab>=4.4.2",
     "requests>=2.32.4",
     "rest-framework-simplejwt>=0.0.2",
     "weasyprint>=65.1",
