--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -24,4 +24,5 @@ dependencies = [
     "rest-framework-simplejwt>=0.0.2",
     "weasyprint>=65.1",
     "whitenoise>=6.9.0",
+    "xlsxwriter>=3.2.5",
 ]
