--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
     "channels>=4.2.2",
+    "daphne>=4.2.0",
     "dj-rest-auth>=7.0.1",
     "django>=5.2.3",
     "django-allauth>=65.9.0",
@@ -22,6 +23,8 @@ dependencies = [
     "reportlab>=4.4.2",
     "requests>=2.32.4",
     "rest-framework-simplejwt>=0.0.2",
+    "serial>=0.0.97",
+    "uvicorn>=0.35.0",
     "weasyprint>=65.1",
     "whitenoise>=6.9.0",
     "xlsxwriter>=3.2.5",
